[gd_scene load_steps=18 format=3 uid="uid://ch8eiplk7iqaq"]

[ext_resource type="Script" path="res://bot.gd" id="1_7g7qg"]
[ext_resource type="PackedScene" uid="uid://txwcakpkje0a" path="res://TangentMover.blend" id="2_x8at5"]
[ext_resource type="Script" path="res://TangentMover.gd" id="3_dkkao"]
[ext_resource type="Script" path="res://Label3D.gd" id="4_nfrdk"]
[ext_resource type="PackedScene" uid="uid://vwc8stcgxshu" path="res://temp.blend" id="5_0beei"]
[ext_resource type="Script" path="res://KCShow.gd" id="6_cylyi"]
[ext_resource type="PackedScene" uid="uid://lt8i3ldxf80b" path="res://temp2.blend" id="6_euqtr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sby2n"]
resource_local_to_scene = true
transparency = 1

[sub_resource type="BoxMesh" id="BoxMesh_3lrs2"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_sby2n")

[sub_resource type="Gradient" id="Gradient_gkhka"]
offsets = PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1)
colors = PackedColorArray(1, 0.392157, 0.392157, 1, 1, 1, 0.392157, 1, 0.392157, 1, 0.392157, 1, 0.392157, 1, 1, 1, 0.392157, 0.392157, 1, 1, 1, 0.392157, 1, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 5

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_4tgsc"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lgoyh"]
transparency = 1

[sub_resource type="BoxMesh" id="BoxMesh_y1s0t"]
material = SubResource("StandardMaterial3D_lgoyh")
size = Vector3(0.2, 0.2, 0.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_l28q8"]

[sub_resource type="SphereMesh" id="SphereMesh_vdtvm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b2hj0"]
transparency = 1
albedo_color = Color(1, 1, 0, 0.737255)

[sub_resource type="BoxMesh" id="BoxMesh_vk8vs"]
material = SubResource("StandardMaterial3D_b2hj0")
size = Vector3(1.1, 1.1, 1.1)

[node name="botBody" type="MeshInstance3D"]
mesh = SubResource("BoxMesh_3lrs2")
script = ExtResource("1_7g7qg")
gradient = SubResource("Gradient_gkhka")
metadata/orderNum = 0
metadata/connectedListBot = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_4tgsc")

[node name="Front" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
mesh = SubResource("BoxMesh_y1s0t")

[node name="TangentMover" parent="." instance=ExtResource("2_x8at5")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0)
script = ExtResource("3_dkkao")

[node name="Colision1" type="StaticBody3D" parent="TangentMover"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.59895)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="TangentMover/Colision1"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
shape = SubResource("SphereShape3D_l28q8")

[node name="Colision2" type="StaticBody3D" parent="TangentMover"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.75517)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="TangentMover/Colision2"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
shape = SubResource("SphereShape3D_l28q8")

[node name="ForwardTan" type="MeshInstance3D" parent="TangentMover"]
visible = false
mesh = SubResource("SphereMesh_vdtvm")

[node name="BackTan" type="MeshInstance3D" parent="TangentMover"]
visible = false
mesh = SubResource("SphereMesh_vdtvm")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="."]
remote_path = NodePath("../TangentMover")
update_rotation = false
update_scale = false

[node name="Outline" type="MeshInstance3D" parent="."]
sorting_offset = -1.0
mesh = SubResource("BoxMesh_vk8vs")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.56643, 0)
top_level = true
sorting_offset = 1.0
pixel_size = 0.015
text = "1"
script = ExtResource("4_nfrdk")

[node name="Testing" type="Node3D" parent="."]
script = ExtResource("6_cylyi")

[node name="temp" parent="Testing" instance=ExtResource("5_0beei")]
transform = Transform3D(-0.556264, 0, -0.326489, 0, 0.645, 0, 0.326489, 0, -0.556264, -0.00637871, 0.547286, -0.0128968)
visible = false

[node name="temp2" parent="Testing" instance=ExtResource("6_euqtr")]
transform = Transform3D(0.31, 0, 0, 0, 0.31, 0, 0, 0, 0.31, -0.000175655, 0.5, -0.00802749)
visible = false

[node name="temp3" parent="Testing" instance=ExtResource("5_0beei")]
transform = Transform3D(-0.116502, 0, -0.243572, 0, 0.27, 0, 0.243572, 0, -0.116502, 0.32054, 0.512676, 0.294057)
visible = false
